--- a/index.html
+++ b/index.html
@@ -12,12 +12,62 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="img\Cas-1.png" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Step 1</h5>
+              <p>Draw a box.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img\Cas-2.png" alt="Second slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Step 2</h5>
+            <p>Draw a box.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img\Cas-3.png" alt="Third slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Step 3</h5>
+            <p>Draw a box.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img\Cas-4.png" alt="Fourth slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Step 4</h5>
+            <p>Draw a box.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img\Cas-5.png" alt="Fifth slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Step 5</h5>
+            <p>Draw a box.</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
-   
-   
 
-   
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
